--- a/static/css/layout.main.css
+++ b/static/css/layout.main.css
@@ -23,13 +23,12 @@ body {
   height: 60px;
 }
 
-
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
 #wrap > .container {
-  padding: 80px 15px 0;
+  padding: 20px 15px 0;
 }
 .container .credit {
   margin: 20px 0;
@@ -53,5 +52,5 @@ h3 {
 }
 
 h3 > span.orange {
-  color: #FF9C44;
+  color: #ff9c44;
 }
