--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -13,6 +13,7 @@
 <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
 <link type="text/css" rel="stylesheet" href="/static/css/layout.main.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
+<link type="text/css" rel="stylesheet" href="/static/css/{% block styles %}{% endblock %}.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.responsive.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.quickfix.css" />
 <!-- /styles -->
@@ -40,7 +41,7 @@
   <div id="wrap">
 
     <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -113,10 +114,27 @@
     </div>
   </div>
 
+  <script>
+    const seeking = document.querySelector('.form-group input[type="checkbox"]');
+    const seekingDescriptionText = document.getElementById('seeking_description');
+    const seekingDescription = seekingDescriptionText?.parentElement;
+
+    const controlDescription = target => {
+      if (target.checked)
+        seekingDescription.classList.add('show-seeking-description')
+      else {
+        seekingDescription.classList.remove('show-seeking-description');
+        seekingDescriptionText.value = '';
+      }
+    };
+
+    controlDescription(seeking);
+    seeking.onchange = e => controlDescription(e.target);
+  </script>
+
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
   <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
   <script type="text/javascript" src="/static/js/plugins.js" defer></script>
 
 </body>
-</html>
