--- a/static/css/home.css
+++ b/static/css/home.css
@@ -23,6 +23,7 @@ h3 a button.btn {
   padding: 8px 18px;
   border-radius: 6px;
   border: none;
+  width: 140px;
 }
 
 h3 a:first-of-type button.btn {
