--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -1,121 +1,153 @@
 {% extends 'layouts/main.html' %}
-{% block title %}Venue Search{% endblock %}
-{% block content %}
-<div class="row">
-	<div class="col-sm-6">
-		<h1 class="monospace">
-			{{ venue.name }}
-		</h1>
-		<p class="subtitle">
-			ID: {{ venue.id }}
-		</p>
-		<div class="genres">
-			{% for genre in venue.genres %}
-			<span class="genre">{{ genre }}</span>
-			{% endfor %}
-		</div>
-		<p>
-			<i class="fas fa-globe-americas"></i> {{ venue.city }}, {{ venue.state }}
-		</p>
-		<p>
-			<i class="fas fa-map-marker"></i> {% if venue.address %}{{ venue.address }}{% else %}No Address{% endif %}
-		</p>
-		<p>
-			<i class="fas fa-phone-alt"></i> {% if venue.phone %}{{ venue.phone }}{% else %}No Phone{% endif %}
-		</p>
-		<p>
-			<i class="fas fa-link"></i> {% if venue.website %}<a href="{{ venue.website }}" target="_blank">{{ venue.website }}</a>{% else %}No Website{% endif %}
-		</p>
-		<p>
-			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}" target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
-		</p>
-		{% if venue.seeking_talent %}
-		<div class="seeking">
-			<p class="lead">Currently seeking talent</p>
-			<div class="description">
-				<i class="fas fa-quote-left"></i> {{ venue.seeking_description }} <i class="fas fa-quote-right"></i>
-			</div>
-		</div>
-		{% else %}	
-		<p class="not-seeking">
-			<i class="fas fa-moon"></i> Not currently seeking talent
-		</p>
-		{% endif %}
-	</div>
-	<div class="col-sm-6">
-		<img src="{{ venue.image_link }}" alt="Venue Image" />
-	</div>
-</div>
-<section>
-	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
-	<div class="row">
-		{%for show in venue.upcoming_shows %}
-		<div class="col-sm-4">
-			<div class="tile tile-show">
-				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
-				<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
-			</div>
-		</div>
-		{% endfor %}
-	</div>
-</section>
-<section>
-	<h2 class="monospace">{{ venue.past_shows_count }} Past {% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
-	<div class="row">
-		{%for show in venue.past_shows %}
-		<div class="col-sm-4">
-			<div class="tile tile-show">
-				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
-				<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
-			</div>
-		</div>
-		{% endfor %}
-	</div>
-</section>
-<form class="modification-form" data-id="{{ venue.id }}">
-	<button type="submit" class="edit"><a href="/venues/{{ venue.id }}/edit">Edit Venue</a></button>
-	<button type="submit" class="delete" data-id="{{ venue.id }}">Delete Venue</button>
-</form>
-<style>
-	.modification-form {
-		display: flex;
-		justify-content: space-evenly;
-		margin: 60px;
-	}
-	.modification-form button {
-		font-size: 15px;
-		border: 1px solid grey;
-		border-radius: 8px;
-		padding: 5px;
-		color: black;
-	}
-	.modification-form a {
-		color: inherit;
-	}
-	.modification-form a:hover {
-		text-decoration: none;
-	}
-	.modification-form .edit:hover {
-		background-color: limegreen;
-		color: white;
-	}
-	.modification-form .delete:hover {
-		background-color: red;
-		color: white;
-	}
-</style>
-<script>
-	const deleteButton = document.querySelector('.delete');
-	deleteButton.onclick = (evt) => {
-		evt.preventDefault();
-		venueID = evt.target.dataset.id;
-		// console.log(venueID);
-		fetch(`/venues/${venueID}`, {
-			method: 'DELETE'
-		}).catch(err => console.log(`Error is: ${err}`));
-	}
-</script>
-{% endblock %}
+{% block title %}Fyyur | {{ venue.name }}{% endblock %}
+{% block styles %}individual{% endblock %}
 
+{%block content %}
+<div class="row">
+  <div class="col-sm-7">
+    <h1>{{ venue.name }}</h1>
+    <div class="controls">
+      <p class="subtitle">ID: {{ venue.id }}</p>
+      <div>
+        <a href="/venues/{{ venue.id }}/edit"><i class="fas fa-edit" title="Edit Venue"></i></a>
+        <i
+          class="fas fa-trash-alt"
+          title="Delete Venue"
+          data-toggle="modal"
+          data-target="#exampleModal"
+        ></i>
+
+        <!-- Modal -->
+        <div 
+          class="modal fade"
+          id="exampleModal"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">
+                  Confirm Deletion
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Are you sure you want to delete <span>{{ venue.name }}</span> venue?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                  Cancel
+                </button>
+                <button
+                  id="delete-venue"
+                  data-id="{{ venue.id }}"
+                  type="button"
+                  class="btn btn-primary"
+                  onclick="deleteVenue()"
+                >Delete
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="genres">
+      {% for genre in venue.genres %}
+      <span class="genre">{{ genre }}</span>
+      {% endfor %}
+    </div>
+    <p class="city-state">
+      <i class="fas fa-globe-americas"></i>
+      {{ venue.city }}, {{ venue.state }}
+    </p>
+    <p>
+      <i class="fas fa-map-marker"></i>
+      {% if venue.address %}{{ venue.address}}
+      {% else %}No Address
+      {% endif %}
+    </p>
+    <p>
+      <i class="fas fa-phone-alt"></i>
+      {% if venue.phone %}{{ venue.phone }}{%else %}No Phone{% endif %}
+    </p>
+    <p>
+      <i class="fas fa-link"></i>
+      {% if venue.website %}<a href="{{ venue.website }}" target="_blank">{{ venue.website }}</a>
+      {% else %}No Website
+      {% endif %}
+    </p>
+    <p>
+      <i class="fab fa-facebook-f"></i>
+      {% if venue.facebook_link %}
+        <a href="{{ venue.facebook_link }}" target="_blank">{{ venue.facebook_link }}</a>
+      {% else %}
+        No Facebook Link
+      {% endif %}
+    </p>
+    {% if venue.seeking_talent %}
+    <div class="seeking">
+      <p class="lead">Currently seeking talent</p>
+      <div class="description">
+        <i class="fas fa-quote-left"></i>
+        <span class="seeking_description">{{ venue.seeking_description }}</span>
+        <i class="fas fa-quote-right"></i>
+      </div>
+    </div>
+    {% else %}
+    <p class="not-seeking">
+      <i class="fas fa-moon"></i>
+      Not currently seeking talent
+    </p>
+    {% endif %}
+  </div>
+  <div class="col-sm-5">
+    <img src="{{ venue.image_link }}" alt="Venue Image" />
+  </div>
+</div>
+<section class="shows">
+  <h2>
+    <span>{{ venue.upcoming_shows_count }}</span> Upcoming
+    {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}
+  </h2>
+  <div class="row">
+    {%for show in venue.upcoming_shows %}
+    <div class="col-sm-6 col-md-6 col-lg-4">
+      <div class="tile tile-show">
+        <img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
+        <h5>
+          <a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a>
+        </h5>
+        <h6>{{ show.start_time|datetime('full') }}</h6>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</section>
+<section class="shows">
+  <h2>
+    <span>{{ venue.past_shows_count }}</span> Past
+    {% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}
+  </h2>
+  <div class="row">
+    {%for show in venue.past_shows %}
+    <div class="col-sm-6 col-md-6 col-lg-4">
+      <div class="tile tile-show">
+        <img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
+        <h5>
+          <a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a>
+        </h5>
+        <h6>{{ show.start_time|datetime('full') }}</h6>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</section>
+
+<script src="/static/js/main.js"></script>
+{% endblock %}
