--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,6 +1,7 @@
 {% extends 'layouts/main.html' %}
+{% block title %}Fyyur | Error{% endblock %}
+
 {% block content %}
-  <h1>Sorry ...</h1>
-  <p>There's nothing here!</p>
-  <p><a href="{{url_for('index')}}">Back</a></p>
+<h1>Sorry...</h1>
+<p>There's nothing here!</p>
 {% endblock %}
