--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -42,19 +42,25 @@
     <div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target=".navbar-collapse"
+            onclick="openBurger()"
+          >
+            <i class="fas fa-bars"></i>
           </button>
-          <a class="navbar-brand" href="/">🔥</a>
+          <a class="navbar-brand" href="/" title="Fyyur">🔥</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li>
-              {% if (request.endpoint == 'venues') or
+              {% if
+                (request.endpoint == 'venues') or
                 (request.endpoint == 'search_venues') or
-                (request.endpoint == 'show_venue') %}
+                (request.endpoint == 'show_venue') 
+              %}
               <form class="search" method="post" action="/venues/search">
                 <input class="form-control"
                   type="search"
@@ -63,9 +69,12 @@
                   aria-label="Search">
               </form>
               {% endif %}
-              {% if (request.endpoint == 'artists') or
+
+              {% if
+                (request.endpoint == 'artists') or
                 (request.endpoint == 'search_artists') or
-                (request.endpoint == 'show_artist') %}
+                (request.endpoint == 'show_artist') 
+              %}
               <form class="search" method="post" action="/artists/search">
                 <input class="form-control"
                   type="search"
@@ -76,10 +85,23 @@
               {% endif %}
             </li>
           </ul>
+
           <ul class="nav navbar-nav">
-            <li {% if request.endpoint == 'venues' %} class="active" {% endif %}><a href="{{ url_for('venues') }}">Venues</a></li>
-            <li {% if request.endpoint == 'artists' %} class="active" {% endif %}><a href="{{ url_for('artists') }}">Artists</a></li>
-            <li {% if request.endpoint == 'shows' %} class="active" {% endif %}><a href="{{ url_for('shows') }}">Shows</a></li>
+            <li
+              {% if request.endpoint == 'venues' %} class="active" {% endif %}
+            >
+              <a href="{{ url_for('venues') }}">Venues</a>
+            </li>
+            <li
+              {% if request.endpoint == 'artists' %} class="active" {% endif %}
+            >
+              <a href="{{ url_for('artists') }}">Artists</a>
+            </li>
+            <li
+              {% if request.endpoint == 'shows' %} class="active" {% endif %}
+            >
+              <a href="{{ url_for('shows') }}">Shows</a>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -100,15 +122,16 @@
       {% endwith %}
 
       {% block content %}{% endblock %}
-      
     </main>
-
   </div>
 
   <div id="footer">
     <div class="container">
       <p>Fyyur &copy; All Rights Reserved.</p>
       {% block footer %}{% endblock %}
+      <p>Created by 
+        <a class="author" href="https://github.com/ahmedbaligh/">Ahmed Baligh</a>
+      </p>
     </div>
   </div>
 
@@ -118,6 +141,8 @@
     const seekingDescription = seekingDescriptionText?.parentElement;
 
     const controlDescription = target => {
+      if (!target) return;
+
       if (target.checked)
         seekingDescription.classList.add('show-seeking-description')
       else {
@@ -127,12 +152,17 @@
     };
 
     controlDescription(seeking);
-    seeking.onchange = e => controlDescription(e.target);
+    if (seeking) seeking.onchange = e => controlDescription(e.target);
   </script>
 
+  <script src="/static/js/main.js"></script>
+
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
+  <script>
+    window.jQuery || document.write(
+      '<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>'
+    );
+  </script>
   <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
   <script type="text/javascript" src="/static/js/plugins.js" defer></script>
-
 </body>
