--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -32,7 +32,7 @@
                 <h5 class="modal-title" id="exampleModalLabel">
                   Confirm Deletion
                 </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close hidden-xs" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
@@ -149,5 +149,4 @@
   </div>
 </section>
 
-<script src="/static/js/main.js"></script>
 {% endblock %}
