feat: Add website's meta data
Add meta data about application's name, description, and author.

--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -4,8 +4,9 @@
 <title>{% block title %}{% endblock %}</title>
 
 <!-- meta -->
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="Fyyur is a musical venue and artist booking site that facilitates the discovery and bookings of shows between local performing artists and venues.">
+<meta name="author" content="Ahmed Baligh">
+<meta name="application-name" content="Fyyur">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <!-- /meta -->
 
